Adds permutation sample